python-lua (0.4-1) UNRELEASED; urgency=medium

  * New release.
  * Updated standards version to 3.9.5 (no changes needed).

 -- Bas Wijnen <wijnen@debian.org>  Thu, 03 Apr 2014 01:40:36 -0400

python-lua (0.3-1) unstable; urgency=low

  * New release with some fixes.
  * New upstream location.

 -- Bas Wijnen <wijnen@debian.org>  Fri, 31 Aug 2012 17:21:42 +0200

python-lua (0.2-1) unstable; urgency=low

  * New release with many fixes, especially regarding object ownership.

 -- Bas Wijnen <wijnen@debian.org>  Fri, 15 Jun 2012 20:01:27 +0200

python-lua (0.1-1) unstable; urgency=low

  * Initial release. (Closes: #672344)

 -- Bas Wijnen <wijnen@debian.org>  Thu, 10 May 2012 10:34:16 +0200