@@ -2,6 +2,7 @@ python-lua (0.4-1) UNRELEASED; urgency=medium
 
   * New release.
   * Updated standards version to 3.9.5 (no changes needed).
+  * Support python3.
 
  -- Bas Wijnen <wijnen@debian.org>  Thu, 03 Apr 2014 01:40:36 -0400
 
